Fix label text align

--- a/src/renderer/src/components/Input.scss
+++ b/src/renderer/src/components/Input.scss
@@ -33,6 +33,8 @@ div.input {
 		font-weight: 500;
 		position: relative;
 		line-height: normal;
+		width: 100%;
+		text-align: start;
 	}
 
 	> input {
